--- a/js高程/26模块.md
+++ b/js高程/26模块.md
@@ -2,3 +2,54 @@
 
 什么是模块模式？
 逻辑分块、各自封装、相互独立、每个块自行决定对外暴露什么，同时自行决定引入执行哪些外部代码
+
+模块模式
+AMD Asynchronous Module Definition 异步模块定义
+UMD Universal Module Definition 通用模块定义
+
+ES6 使用基于文件的模块
+ES6 模块是单例
+
+CommonJS Node.js
+
+import、export 不能出现再 if 条件中，必须出现再所有代码块和函数的外面
+
+命名导出：导出变量/函数等的名称绑定
+
+模块导出不是像你熟悉的赋值运算符=那样只是值或者引用的普通赋值，实际上，导出的是对这些东西（变量等）的绑定（类似于指针）
+
+本质上，绑定是一个指向变量本身的引用或者指针，而不是这个值的复制
+
+默认导出：把一个特定导出绑定设置为导入模块时的默认导出，default
+
+export default A 导出的是变量、函数值的绑定，而不是标识符的绑定，A 如果修改了，不影响之前导出的值
+
+export { A as default} 导出的是，标识符 A（类似于指针、引用），A 如果修改了，导出的值将会决议到新的值
+
+export default {
+foo() { ... }
+bar() { ... }
+..
+}
+
+JS 引擎无法静态分析平凡对象的内容，它无法对静态 import 进行进行性能优化，让每个成员独立且显示地导出的优点是引擎可以对其进行静态分析和优化
+
+import { foo, bar, baz } from 'foo';
+
+{ .. } 看起来像一个对象字面量，或者甚至是一个对象解构语法，但这种形式是专用于模块的
+
+字符串"foo"成为模块指定符，可静态分析，必须是字符串字面值，不能是持有字符值的变量
+
+import foo from 'foo' == import { default as foo } from 'foo'
+
+命名空间导入 namespace import
+
+foo();
+
+import { foo } from 'foo'
+
+不仅是因为 import...的语句的静态决议在编译过程中确定了 foo 值是什么，也因为它“提升”了在模块作用域顶层的声明，使它在模块所有位置可用
+
+import "foo"
+
+加载、编译、求值
