--- a/interview/23.8.15JSSDK.md
+++ b/interview/23.8.15JSSDK.md
@@ -15,3 +15,24 @@ Strategy 策略模式-对象行为型模式
 
 意图：定义一系列的算法，把它们一个个封装起来，并且使它们可相互替换 -> 算法独立于使用它的客户而变化
 别名：Policy 政策
+
+抽象工厂模式-创建型模式
+为系列中的每件产品明确声明接口（如椅子、沙发或咖啡桌），确保所有产品变体都继承这些接口
+抽象工厂，包含系列中所有产品构造方法的接口，createChair、createSofa、createCoffeeTable，返回抽象产品类型
+
+1. 以不同的产品类型与产品变体为维度绘制矩阵
+2. 为所有产品声明抽象产品接口，然后让具体产品类实现这些接口
+3. 声明抽象工厂接口，并且在接口中为所有抽象产品提供一组构建方法
+4. 为每种产品变体实现一个具体工厂类
+5. 在应用程序中开发初始化代码。该代码根据应用程序配置或当前环境，对特定具体工厂类进行初始化，然后将该工厂对象传递给所有需要创建产品的类
+6. 找出代码中所有对产品构造函数的直接调用，将其替换为对工厂对象中相应构建方法的调用
+
+工厂模式
+- 简单工厂模式、工厂方法模式、抽象工厂模式
+
+简单工厂模式优点：将对象的创建交给专门的工厂类负责，实现了对象的创建和对象的使用分离
+缺点：工厂类不够灵活，增加新的具体产品需要修改工厂类的判断逻辑代码
+
+工厂方法模式：定义一个用于创建对象的接口或抽象类，让子类决定实例化哪一个类
+优点：遵循了开闭原则，扩展性极强
+缺点：增加了类的数量，当有成千上万个类型的产品，就需要有成千上万个工厂来生产这些产品
