--- a/interview/23.8.15项目难题及解决.md
+++ b/interview/23.8.15项目难题及解决.md
@@ -1,3 +1,65 @@
 引导至性能优化
 工程类的，单包，包体积大，上线冲突，管理混乱等 -> 拆包、业务分包
 业务类的
+
+STAR法则
+Situation：事情是在什么情况下发生，基于一个怎样的背景；
+Task：你是如何明确你的任务的；
+Action：针对这样的情况分析，你采用了什么行动方式，具体做了哪些工作内容；
+Result：结果怎样，带来了什么价值，在整个过程中你学到了什么，有什么新的体会。
+
+1. 多级联动
+
+背景：做员工主数据-权限申请/实名认证的一个需求，有一些表单页面，可以填申请的信息，如岗位、姓名、手机号、身份证号，有一个特殊的是选管辖的区域，如河南分公司授权一区网格一区，如何实现这个多级联动
+
+明确任务：
+
+需求细化：有哪些级？两级/三级小区经理角色-分公司、米家or授权、专卖1～10区/授权1～10区；网格主管角色-分公司-授权几区-网格几区
+可以回退，如选择到最后一级，可以点前几级
+支持多选/单选
+支持操作取消，恢复原数据
+
+实现：
+定义数据源
+child结构，理想情况下支持嵌套（性能、庞大的组件树），有checked属性
+
+一次拉取，不用处理分页、loading
+{
+  title: '河南分公司',
+  id: 123,
+  checked: false,
+  children: [
+    {
+      title: "米家“,
+      id: 'mijia',
+      checked: false,
+      children: [
+        {
+          title: "专卖一区“,
+          id: "special1",
+          checked: false
+        }
+      ]
+    }
+  ]
+}
+
+深浅拷贝 JS引用类型，组件props有对象的话，如果对象的内存地址不变，则组件不会刷新 -> 重新赋新的引用值（字面量）
+
+处理边界情况
+支持多选的情况下，如果不选中任何一个，则默认选中第一个
+操作取消，恢复数据 -> 每次确认后，将当前的数据存下来如this上，下次操作完成后，如果没有确认，则恢复之前存储的数据
+
+空间换时间
+for 循环，寻找某一个特定值，新增map存储key -> value映射，快速访问某一数据
+
+结果：
+实现了，学习到组件的封装，主要是考虑异常情况、边界情况、深浅拷贝的问题、React的更新
+
+2. 原生端与JS的交互，理解了原理
+
+之前做一个排程试驾的项目，需要用到地图、录音
+
+异常情况、UI降级、权限问题、策略模式：android、ios平台的差异，代替大量的if-else
+
+通信原理，两端传递消息的方式，学习了一些android知识，RN原理
